# app_car_prices_pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: API_EXAMPLES.md  BEGINNERS_GUIDE.md  BUSINESS_CASE.md  DATA_DICTIONARY.md  FORMAT_BENCHMARKS.md  MODEL_CARD.md  PIPELINE_DESIGN.md  TESTING_GUIDE.md  XGBOOST_SERVABILITY.md
models/: metrics.json  model_comparison.json  price_pipeline.pkl  serving_metadata.json
notebooks/: 01_business_understanding.ipynb  02_data_understanding_eda.ipynb  03_data_format_benchmarks.ipynb  04_feature_engineering.ipynb  05_model_comparison.ipynb  06_evaluation_and_selection.ipynb  07_productionisation.ipynb  08_xgboost_deep_dive.ipynb  api_examples.ipynb
src/car_pricing/: __init__.py  config.py  data.py  features.py  models.py  pipeline.py  predict.py  train.py
tests/: test_pipeline.py  test_stubs.py
tools/: build_notebooks.py
