[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "car-pricing-pipeline"
version = "1.0.0"
description = "Beginner-friendly used-car price prediction pipeline (learning starter with guided docs and test stubs)."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
